2010-02-14  Diego Escalante Urrelo  <descalante@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [gtk] WebKitDownload's currentSize property is guint, should be guint64
        https://bugs.webkit.org/show_bug.cgi?id=34829

        Actually use a guint64 for current-size property in WebKitDownload, we
        were using a guint which is likely the cause for wrong sizes for files
        over 4 Gb.

        * webkit/webkitdownload.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@54762 bbb929c8-8fbe-4397-9dbb-9b2b20218538